--- a/Laba1_ppois/Laba1_ppois/Laba1_ppois.vcxproj
+++ b/Laba1_ppois/Laba1_ppois/Laba1_ppois.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Laba1_ppois.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
